--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,12 +141,12 @@ a:hover {
       font-size: 2rem !important; } }
       
       .logo img {
-    max-width: 200px;
+    max-width: 50px;
     height: auto;
     border-radius:3px;
 }
      .logo-01 img {
-    max-width: 200px;
+    max-width: 50px;
     height: auto;
     border-radius:3px;
 }
@@ -225,6 +225,9 @@ a:hover {
 
 .logo-01 {
   position: absolute;
+  max-width: 50px;
+    height: auto;
+    border-radius:3px;
   font-size: 25px;
   color: #fff; }
   @media screen and (min-width: 768px) {
